target/classes/gParser.java
// Generated from java-escape by ANTLR 4.11.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class gParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.11.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, NL=15, WS=16, TAB=17, 
		NUM=18, INT=19, FLOAT=20, BOOL=21, STRING=22, SINGLE_LINE_COMMENT=23, 
		MULTI_LINE_COMMENT=24, COLON=25, FOR=26, PLUS=27, MINUS=28, MULTIPLY=29, 
		DIVIDE=30, MOD=31, ASSIGN=32, PLUS_EQUAL=33, MINUS_EQUAL=34, MULTI_EQUAL=35, 
		DIVIDE_EQUAL=36, MOD_EQUAL=37, EQUAL_EQUAL=38, DOESNOT_EQUAL=39, LESS_THAN=40, 
		LESS_THAN_EQUAL=41, GREATER_THAN=42, GREATER_THAN_EQUAL=43, AND=44, OR=45, 
		VAR_NAME=46, ANYTHING=47, INDENT=48, DEDENT=49;
	public static final int
		RULE_arithmetic_operations = 0, RULE_assignment_operations = 1, RULE_conditional_statements = 2, 
		RULE_if_else_block = 3, RULE_while_block = 4, RULE_for_block = 5, RULE_comments = 6, 
		RULE_function_args = 7, RULE_function_call_args = 8, RULE_function_call = 9, 
		RULE_function_declaration = 10, RULE_function_block = 11, RULE_block = 12, 
		RULE_statement = 13, RULE_denter_tester = 14;
	private static String[] makeRuleNames() {
		return new String[] {
			"arithmetic_operations", "assignment_operations", "conditional_statements", 
			"if_else_block", "while_block", "for_block", "comments", "function_args", 
			"function_call_args", "function_call", "function_declaration", "function_block", 
			"block", "statement", "denter_tester"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'('", "')'", "'if'", "'):'", "'\\n'", "'elif'", "'else'", "'while'", 
			"'for ('", "','", "'def '", "'<-'", "'hello'", "'there'", null, null, 
			"'   '", null, null, null, null, null, null, null, "':'", "'for'", "'+'", 
			"'-'", "'*'", "'/'", "'%'", "'='", "'+='", "'-='", "'*='", "'/='", "'%='", 
			"'=='", "'!='", "'<'", "'<='", "'>'", "'>='", "'and'", "'or'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, null, null, null, null, null, null, null, null, null, null, null, 
			null, null, null, "NL", "WS", "TAB", "NUM", "INT", "FLOAT", "BOOL", "STRING", 
			"SINGLE_LINE_COMMENT", "MULTI_LINE_COMMENT", "COLON", "FOR", "PLUS", 
			"MINUS", "MULTIPLY", "DIVIDE", "MOD", "ASSIGN", "PLUS_EQUAL", "MINUS_EQUAL", 
			"MULTI_EQUAL", "DIVIDE_EQUAL", "MOD_EQUAL", "EQUAL_EQUAL", "DOESNOT_EQUAL", 
			"LESS_THAN", "LESS_THAN_EQUAL", "GREATER_THAN", "GREATER_THAN_EQUAL", 
			"AND", "OR", "VAR_NAME", "ANYTHING", "INDENT", "DEDENT"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "java-escape"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public gParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Arithmetic_operationsContext extends ParserRuleContext {
		public List<Arithmetic_operationsContext> arithmetic_operations() {
			return getRuleContexts(Arithmetic_operationsContext.class);
		}
		public Arithmetic_operationsContext arithmetic_operations(int i) {
			return getRuleContext(Arithmetic_operationsContext.class,i);
		}
		public TerminalNode NUM() { return getToken(gParser.NUM, 0); }
		public TerminalNode VAR_NAME() { return getToken(gParser.VAR_NAME, 0); }
		public TerminalNode MULTIPLY() { return getToken(gParser.MULTIPLY, 0); }
		public TerminalNode DIVIDE() { return getToken(gParser.DIVIDE, 0); }
		public TerminalNode MOD() { return getToken(gParser.MOD, 0); }
		public TerminalNode PLUS() { return getToken(gParser.PLUS, 0); }
		public TerminalNode MINUS() { return getToken(gParser.MINUS, 0); }
		public Arithmetic_operationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_arithmetic_operations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterArithmetic_operations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitArithmetic_operations(this);
		}
	}

	public final Arithmetic_operationsContext arithmetic_operations() throws RecognitionException {
		return arithmetic_operations(0);
	}

	private Arithmetic_operationsContext arithmetic_operations(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Arithmetic_operationsContext _localctx = new Arithmetic_operationsContext(_ctx, _parentState);
		Arithmetic_operationsContext _prevctx = _localctx;
		int _startState = 0;
		enterRecursionRule(_localctx, 0, RULE_arithmetic_operations, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(37);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(31);
				match(T__0);
				setState(32);
				arithmetic_operations(0);
				setState(33);
				match(T__1);
				}
				break;
			case NUM:
				{
				setState(35);
				match(NUM);
				}
				break;
			case VAR_NAME:
				{
				setState(36);
				match(VAR_NAME);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(47);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(45);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
					case 1:
						{
						_localctx = new Arithmetic_operationsContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_arithmetic_operations);
						setState(39);
						if (!(precpred(_ctx, 4))) throw new FailedPredicateException(this, "precpred(_ctx, 4)");
						setState(40);
						_la = _input.LA(1);
						if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 3758096384L) != 0) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(41);
						arithmetic_operations(5);
						}
						break;
					case 2:
						{
						_localctx = new Arithmetic_operationsContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_arithmetic_operations);
						setState(42);
						if (!(precpred(_ctx, 3))) throw new FailedPredicateException(this, "precpred(_ctx, 3)");
						setState(43);
						_la = _input.LA(1);
						if ( !(_la==PLUS || _la==MINUS) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(44);
						arithmetic_operations(4);
						}
						break;
					}
					} 
				}
				setState(49);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,2,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Assignment_operationsContext extends ParserRuleContext {
		public List<Assignment_operationsContext> assignment_operations() {
			return getRuleContexts(Assignment_operationsContext.class);
		}
		public Assignment_operationsContext assignment_operations(int i) {
			return getRuleContext(Assignment_operationsContext.class,i);
		}
		public Arithmetic_operationsContext arithmetic_operations() {
			return getRuleContext(Arithmetic_operationsContext.class,0);
		}
		public TerminalNode VAR_NAME() { return getToken(gParser.VAR_NAME, 0); }
		public TerminalNode FLOAT() { return getToken(gParser.FLOAT, 0); }
		public TerminalNode INT() { return getToken(gParser.INT, 0); }
		public TerminalNode NUM() { return getToken(gParser.NUM, 0); }
		public TerminalNode STRING() { return getToken(gParser.STRING, 0); }
		public TerminalNode ASSIGN() { return getToken(gParser.ASSIGN, 0); }
		public TerminalNode PLUS_EQUAL() { return getToken(gParser.PLUS_EQUAL, 0); }
		public TerminalNode MINUS_EQUAL() { return getToken(gParser.MINUS_EQUAL, 0); }
		public TerminalNode MULTI_EQUAL() { return getToken(gParser.MULTI_EQUAL, 0); }
		public TerminalNode DIVIDE_EQUAL() { return getToken(gParser.DIVIDE_EQUAL, 0); }
		public TerminalNode MOD_EQUAL() { return getToken(gParser.MOD_EQUAL, 0); }
		public Assignment_operationsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_assignment_operations; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterAssignment_operations(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitAssignment_operations(this);
		}
	}

	public final Assignment_operationsContext assignment_operations() throws RecognitionException {
		return assignment_operations(0);
	}

	private Assignment_operationsContext assignment_operations(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Assignment_operationsContext _localctx = new Assignment_operationsContext(_ctx, _parentState);
		Assignment_operationsContext _prevctx = _localctx;
		int _startState = 2;
		enterRecursionRule(_localctx, 2, RULE_assignment_operations, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(63);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case T__0:
				{
				setState(51);
				match(T__0);
				setState(54);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					setState(52);
					assignment_operations(0);
					}
					break;
				case 2:
					{
					setState(53);
					arithmetic_operations(0);
					}
					break;
				}
				setState(56);
				match(T__1);
				}
				break;
			case VAR_NAME:
				{
				setState(58);
				match(VAR_NAME);
				}
				break;
			case FLOAT:
				{
				setState(59);
				match(FLOAT);
				}
				break;
			case INT:
				{
				setState(60);
				match(INT);
				}
				break;
			case NUM:
				{
				setState(61);
				match(NUM);
				}
				break;
			case STRING:
				{
				setState(62);
				match(STRING);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(73);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(71);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
					case 1:
						{
						_localctx = new Assignment_operationsContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_assignment_operations);
						setState(65);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(66);
						match(ASSIGN);
						setState(67);
						assignment_operations(8);
						}
						break;
					case 2:
						{
						_localctx = new Assignment_operationsContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_assignment_operations);
						setState(68);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(69);
						_la = _input.LA(1);
						if ( !(((_la) & ~0x3f) == 0 && ((1L << _la) & 266287972352L) != 0) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(70);
						assignment_operations(7);
						}
						break;
					}
					} 
				}
				setState(75);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Conditional_statementsContext extends ParserRuleContext {
		public TerminalNode VAR_NAME() { return getToken(gParser.VAR_NAME, 0); }
		public TerminalNode FLOAT() { return getToken(gParser.FLOAT, 0); }
		public TerminalNode INT() { return getToken(gParser.INT, 0); }
		public TerminalNode NUM() { return getToken(gParser.NUM, 0); }
		public TerminalNode STRING() { return getToken(gParser.STRING, 0); }
		public List<Conditional_statementsContext> conditional_statements() {
			return getRuleContexts(Conditional_statementsContext.class);
		}
		public Conditional_statementsContext conditional_statements(int i) {
			return getRuleContext(Conditional_statementsContext.class,i);
		}
		public TerminalNode EQUAL_EQUAL() { return getToken(gParser.EQUAL_EQUAL, 0); }
		public TerminalNode DOESNOT_EQUAL() { return getToken(gParser.DOESNOT_EQUAL, 0); }
		public TerminalNode LESS_THAN() { return getToken(gParser.LESS_THAN, 0); }
		public TerminalNode LESS_THAN_EQUAL() { return getToken(gParser.LESS_THAN_EQUAL, 0); }
		public TerminalNode GREATER_THAN() { return getToken(gParser.GREATER_THAN, 0); }
		public TerminalNode GREATER_THAN_EQUAL() { return getToken(gParser.GREATER_THAN_EQUAL, 0); }
		public TerminalNode OR() { return getToken(gParser.OR, 0); }
		public TerminalNode AND() { return getToken(gParser.AND, 0); }
		public Conditional_statementsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_conditional_statements; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterConditional_statements(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitConditional_statements(this);
		}
	}

	public final Conditional_statementsContext conditional_statements() throws RecognitionException {
		return conditional_statements(0);
	}

	private Conditional_statementsContext conditional_statements(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		Conditional_statementsContext _localctx = new Conditional_statementsContext(_ctx, _parentState);
		Conditional_statementsContext _prevctx = _localctx;
		int _startState = 4;
		enterRecursionRule(_localctx, 4, RULE_conditional_statements, _p);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,7,_ctx) ) {
			case 1:
				{
				}
				break;
			case 2:
				{
				setState(77);
				match(VAR_NAME);
				}
				break;
			case 3:
				{
				setState(78);
				match(FLOAT);
				}
				break;
			case 4:
				{
				setState(79);
				match(INT);
				}
				break;
			case 5:
				{
				setState(80);
				match(NUM);
				}
				break;
			case 6:
				{
				setState(81);
				match(STRING);
				}
				break;
			}
			_ctx.stop = _input.LT(-1);
			setState(98);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					setState(96);
					_errHandler.sync(this);
					switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
					case 1:
						{
						_localctx = new Conditional_statementsContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_conditional_statements);
						setState(84);
						if (!(precpred(_ctx, 9))) throw new FailedPredicateException(this, "precpred(_ctx, 9)");
						setState(85);
						_la = _input.LA(1);
						if ( !(_la==EQUAL_EQUAL || _la==DOESNOT_EQUAL) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(86);
						conditional_statements(10);
						}
						break;
					case 2:
						{
						_localctx = new Conditional_statementsContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_conditional_statements);
						setState(87);
						if (!(precpred(_ctx, 8))) throw new FailedPredicateException(this, "precpred(_ctx, 8)");
						setState(88);
						_la = _input.LA(1);
						if ( !(_la==LESS_THAN || _la==LESS_THAN_EQUAL) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(89);
						conditional_statements(9);
						}
						break;
					case 3:
						{
						_localctx = new Conditional_statementsContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_conditional_statements);
						setState(90);
						if (!(precpred(_ctx, 7))) throw new FailedPredicateException(this, "precpred(_ctx, 7)");
						setState(91);
						_la = _input.LA(1);
						if ( !(_la==GREATER_THAN || _la==GREATER_THAN_EQUAL) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(92);
						conditional_statements(8);
						}
						break;
					case 4:
						{
						_localctx = new Conditional_statementsContext(_parentctx, _parentState);
						pushNewRecursionContext(_localctx, _startState, RULE_conditional_statements);
						setState(93);
						if (!(precpred(_ctx, 6))) throw new FailedPredicateException(this, "precpred(_ctx, 6)");
						setState(94);
						_la = _input.LA(1);
						if ( !(_la==AND || _la==OR) ) {
						_errHandler.recoverInline(this);
						}
						else {
							if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
							_errHandler.reportMatch(this);
							consume();
						}
						setState(95);
						conditional_statements(7);
						}
						break;
					}
					} 
				}
				setState(100);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,9,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class If_else_blockContext extends ParserRuleContext {
		public TerminalNode TAB() { return getToken(gParser.TAB, 0); }
		public Assignment_operationsContext assignment_operations() {
			return getRuleContext(Assignment_operationsContext.class,0);
		}
		public Conditional_statementsContext conditional_statements() {
			return getRuleContext(Conditional_statementsContext.class,0);
		}
		public TerminalNode BOOL() { return getToken(gParser.BOOL, 0); }
		public TerminalNode VAR_NAME() { return getToken(gParser.VAR_NAME, 0); }
		public List<BlockContext> block() {
			return getRuleContexts(BlockContext.class);
		}
		public BlockContext block(int i) {
			return getRuleContext(BlockContext.class,i);
		}
		public List<If_else_blockContext> if_else_block() {
			return getRuleContexts(If_else_blockContext.class);
		}
		public If_else_blockContext if_else_block(int i) {
			return getRuleContext(If_else_blockContext.class,i);
		}
		public TerminalNode COLON() { return getToken(gParser.COLON, 0); }
		public If_else_blockContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_else_block; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).enterIf_else_block(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof gListener ) ((gListener)listener).exitIf_else_block(this);
		}
	}
